Handle FileException in PDFConverterException.

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -53,6 +53,8 @@ handler.exception.io.file.NoParentException=No parent above : %s
 public.at_line=At line %d
 execution.convert.start.parsing=Parsing folder list : %s
 execution.convert.start.parsed=Found %1$d folders in %2$s
+handler.exception.io.file.OverwriteException=Overwrite deny : %s
+public.at_file=File %s
 
 
 
