--- a/maven/IMG2PDF/src/main/resources/handler.properties
+++ b/maven/IMG2PDF/src/main/resources/handler.properties
@@ -1,3 +1,4 @@
+handler.error.OutOfMemoryError=Program memory usage is exceed for JVM maximum memory size.
 handler.exception.conversion.conversion = Conversion error: %s -> %s
 handler.exception.conversion.invalid_file = Illegal file: %s -> %s
 handler.exception.conversion.overwrite = Overwrite deny: %s
