--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -6,7 +6,7 @@ help = Getting more information
 
 img2pdf.convert.<sourceFiles>[0..*] = Source file that contain several line of directory path.
 img2pdf.convert.<tasklist_sources>[0.*] = Tasklist path
-img2pdf.convert.filter = Filter for image files.Using Regular expressions.(default:${DEFAULT-VALUE})
+img2pdf.convert.filter=Image file filter.Using glob expression.(default:${DEFAULT-VALUE})
 img2pdf.convert.list_destination = Output destination task list(*.XML).
 img2pdf.convert.memory_max_usage = Max usage of memory.(default:${DEFAULT-VALUE})
 img2pdf.convert.open_when_complete = Open PDF when conversion is completed.
