Fix public.at_line not found in handler.properties

--- a/maven/IMG2PDF/src/main/resources/handler.properties
+++ b/maven/IMG2PDF/src/main/resources/handler.properties
@@ -22,3 +22,5 @@ public.file.type.folder = folder
 public.option = option
 public.parameter = parameter
 public.try_help = "Try '%s --help' for more information.
+public.at_file = File %s
+public.at_line = At line %d
