Handle missing required subcommand.

--- a/maven/IMG2PDF/src/main/resources/handler.properties
+++ b/maven/IMG2PDF/src/main/resources/handler.properties
@@ -24,3 +24,4 @@ public.parameter = parameter
 public.try_help = "Try '%s --help' for more information.
 public.at_file = File %s
 public.at_line = At line %d
+handler.exception.parameter.missing_required_subcommand=Missing required subcommand.
