Add filter description to resource bundle

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -3,7 +3,8 @@ execution.convert.start.parsing = Parsing folder list : %s
 execution.convert.start.start_conversion = Start conversion progress
 help=Getting more help information
 img2pdf.convert.<sourceFiles>[0..*]=A text file(utf-8 encoding recommend) contains single/multiple folder path witch want to convert or merge into pdf
-img2pdf.convert.filter=Image file name filter.Using glob expression.(default:${DEFAULT-VALUE})
+img2pdf.convert.filter.0=Image file name filter.Using glob expression.(default:${DEFAULT-VALUE})
+img2pdf.convert.filter.1=*.{jpg,png,bmp} pattern will filter file which contain jpg,png,bmp extension like "test.jpg","hello world.bmp".
 img2pdf.convert.memory_max_usage = Max usage of memory.(default:${DEFAULT-VALUE})
 img2pdf.convert.open_when_complete = Open PDF when conversion is completed.
 img2pdf.convert.overwrite=Overwrite existing file.(default:${DEFAULT-VALUE})
