Add default value to pdf_dst in resource bundle.

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -9,7 +9,7 @@ img2pdf.convert.memory_max_usage = Max usage of memory.(default:${DEFAULT-VALUE}
 img2pdf.convert.overwrite=Overwrite existing file.(default:${DEFAULT-VALUE})
 img2pdf.convert.pdf_align = Alignment of page of pdf.(default:${DEFAULT-VALUE})
 img2pdf.convert.pdf_auto_rotate=Auto rotate page of PDF when image is landscape.
-img2pdf.convert.pdf_destination.0 = Destination of converted file.
+img2pdf.convert.pdf_destination.0 = Destination of converted file.(default:${DEFAULT-VALUE})
 img2pdf.convert.pdf_destination.1=\  It's able to specify auto-define value below:
 img2pdf.convert.pdf_destination.2=\    - <NAME> : Name of folder path in directory list.\n
 img2pdf.convert.pdf_destination.3=\    - <PARENT{N}> : Name of parent of <NAME> path.N represent N+1 level of <NAME>,start with 0.\n
