Add nThread parameter.

--- a/maven/IMG2PDF/src/main/resources/cmd.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd.properties
@@ -6,6 +6,7 @@ img2pdf.convert.<sourceFiles>[0..*]=A text file(utf-8 encoding recommend) contai
 img2pdf.convert.filter.0=Image file name filter.Using glob expression.(default:${DEFAULT-VALUE})
 img2pdf.convert.filter.1=*.{jpg,png,bmp} pattern will filter file which contain jpg,png,bmp extension like "test.jpg","hello world.bmp".
 img2pdf.convert.memory_max_usage = Max usage of memory.(default:${DEFAULT-VALUE})
+img2pdf.convert.thread= Number of thread.(default:${DEFAULT-VALUE})
 img2pdf.convert.overwrite=Overwrite existing file.(default:${DEFAULT-VALUE})
 img2pdf.convert.pdf_align = Alignment of page of pdf.(default:${DEFAULT-VALUE})
 img2pdf.convert.pdf_auto_rotate=Auto rotate page of PDF when image is landscape.
