Allow to handle DirectoryTaskFactoryProcessException

--- a/maven/IMG2PDF/src/main/resources/handler.properties
+++ b/maven/IMG2PDF/src/main/resources/handler.properties
@@ -3,8 +3,8 @@ handler.exception.conversion.conversion = Conversion error: %s -> %s
 handler.exception.conversion.invalid_file = Illegal file: %s -> %s
 handler.exception.conversion.overwrite = Overwrite deny: %s
 handler.exception.conversion.read_image = Image read error: %s -> %s -> %s
-handler.exception.dirlist_task_factory.source.empty_image = %s : No image was found.
-handler.exception.dirlist_task_factory.source.no_map_pattern = %s : No mapped value for pattern:%s
+handler.exception.dirlist_task_factory.source.empty_image=No image was found.
+handler.exception.dirlist_task_factory.source.no_map_pattern=No mapped value for pattern:%s
 handler.exception.io.file.FileNotExistsException = File not found : %s
 handler.exception.io.file.InvalidFileException = Invalid file : %s
 handler.exception.io.file.NoParentException = No parent above : %s
@@ -23,5 +23,4 @@ public.option = option
 public.parameter = parameter
 public.try_help = "Try '%s --help' for more information.
 public.at_file = File %s
-public.at_line = At line %d
 handler.exception.parameter.missing_required_subcommand=Missing required subcommand.
