Change folder structure.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-*.zip
-*.pdf
-*.jpg
-*.png
-*.bmp
-sample
+*.iml
+*.txt
+target
+.org.vincentyeh.IMG2PDF.tmp
+.gradle
+.idea
+.run
+config.properties
+dependency-reduced-pom.xml
