--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.vincentyeh</groupId>
-    <artifactId>img2pdf-lib</artifactId>
-    <version>2.0.0</version>
+    <artifactId>img2pdf.lib</artifactId>
+    <version>3.0.0</version>
     <packaging>jar</packaging>
     <developers>
         <developer>
@@ -13,7 +13,6 @@
         </developer>
     </developers>
     <name>IMG2PDF</name>
-    <url>http://maven.apache.org</url>
 
     <repositories>
         <repository>
@@ -35,7 +34,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
-        <exe-name>img2pdf</exe-name>
         <jar-name>${project.name}-${project.version}</jar-name>
     </properties>
 
