--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.vincentyeh</groupId>
     <artifactId>img2pdf.lib</artifactId>
-    <version>4.0.0-beta</version>
+    <version>4.0.0</version>
     <packaging>jar</packaging>
     <developers>
         <developer>
