move old lib to here

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,1 @@
-*.iml
-*.txt
-target
-.org.vincentyeh.IMG2PDF.tmp
-.gradle
-.idea
-.run
-config.properties
-dependency-reduced-pom.xml
-*.jpg
-*.pdf
+target/
